package edu.uees.tutorias.notification;

public enum TipoEvento {
    RESERVA_CREADA,
    RESERVA_CONFIRMADA,
    RESERVA_CANCELADA,
    RESERVA_REPROGRAMADA
}
